public/style.css
/* ... */
@media (min-width: 1025px) {
  .message__byline-author-avatar {
    margin-right: 0;
    margin-left: 5px;
    width: 40px;
    height: 40px;
  }
}

.message__byline-author-avatar-image {
  max-width: 30px;
  max-height: 30px;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  box-shadow: 0 1px 2px rgba(0,0,0,.2);
}

@media (min-width: 1025px) {
  .message__byline-author-avatar-image {
    max-width: 40px;
    max-height: 40px;
    border-radius: 3px;
  }
}

.message__byline-author-avatar-image--default {
  border-radius: 3px;
}

@media (min-width: 1025px) {
  .message__byline-author-avatar-image--default {
    max-width: 30px;
    max-height: 30px;
    border-radius: 4px;
  }
}

.message__byline-author-pseudo {
  color: #212121;
  font-weight: bold;
  line-height: 30px;
}

@media (min-width: 1025px) {
  .message__byline-author-pseudo {
    display: inline-block; /* needed for direction */
    direction: ltr;
  }
}

/* TOPIC - Message - actions */

.message__byline-date {
  display: table-cell;
  vertical-align: middle;
  text-align: right;
  white-space: nowrap;
}

@media (min-width: 768px) {
  .message__byline-date {
    padding-right: 5px;
  }
}

@media (min-width: 1025px) {
  .message__byline-date {
    display: block;
    padding-right: 0;
    position: absolute;
    top: -6px;
    right: 5px;
    direction: ltr;
  }
}

.message__byline-date-inline {
  cursor: pointer;
  padding: 10px;
  padding-right: 20px;
  background: url(/images/more_vert_18px_blue.svg) no-repeat right 3px center;
  color: #0A77B8;
  font-size: 13px;
  vertical-align: top;
}

@media (min-width: 1025px) {
  .message__byline-date-inline {
    font-size: 12px;
    cursor: default;
  }

  .message__byline-date-inline:hover {
    color: #111;
  }

  .message__byline-date-inline {
    background: white;
    box-shadow: 0 1px 2px rgba(0,0,0,.2);
    padding: 2px 4px;
    color: #333;
    border-radius: 2px;
  }

  .message--even .message__byline-date-inline {
    background: hsl(207, 90%, 99%);
  }
}

/* TOPIC - Message - mobile menu */

@media (MAX-width: 1024px) {
  .message {
    -webkit-transition: -webkit-transform .1s ease-out;
            transition: transform .1s ease-out, -webkit-transform .1s ease-out;
  }

  .message--mine {
    -webkit-transition: -webkit-transform .15s ease-out;
            transition: transform .15s ease-out, -webkit-transform .15s ease-out;
  }

  .message--menu-opened {
    -webkit-transform: translateX(-62px);
            transform: translateX(-62px);
  }

  .message--menu-opened.message--mine {
    -webkit-transform: translateX(-182px);
            transform: translateX(-182px);
  }

  .message__actions {
    display: block;
  }
}

@media (MAX-width: 767px) {
  .message--menu-opened {
    -webkit-transform: translateX(-60px);
            transform: translateX(-60px);
  }

  .message--menu-opened.message--mine {
    -webkit-transform: translateX(-180px);
            transform: translateX(-180px);
  }
}

.message__actions {
  position: absolute;
  right: -72px;
}

.message--mine .message__actions {
  position: absolute;
  right: -192px;
}

@media (MAX-width: 767px) {
  .message__actions {
    right: -70px;
  }

  .message--mine .message__actions {
    right: -190px;
  }
}

.message__actions-action {
  display: inline-block;
  width: 50px;
  text-align: center;
  font-weight: bold;
  font-size: 10px;
  vertical-align: bottom;
  margin-right: 10px;
  margin-top: 5px;
  padding-top: 30px;
  padding-bottom: 5px;
  border-radius: 4px;
  background: white;
  background-position: center 5px;
  background-repeat: no-repeat;
  box-shadow: 0 1px 2px rgba(0,0,0,.2);
  cursor: pointer;
  -webkit-transition: -webkit-transform .075s ease-out;
          transition: transform .075s ease-out, -webkit-transform .075s ease-out;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
}

.message__actions-action:active {
    -webkit-transform: scale(.85);
            transform: scale(.85);
}

.message__actions-action--quote {
  background-image: url(/images/ic_reply_24px.svg);
}

.message__actions-action--delete {
  background-image: url(/images/ic_delete_24px.svg);
}

.message__actions-action--edit {
  background-image: url(/images/edit.svg);
}

/* TOPIC - Message - content */

.message__content {
  padding: 0 9px;
  word-wrap: break-word;
  word-break: break-all;
  border: 1px solid transparent; /* pour prendre en compte margin de .message__content-text > p */
}

@media (min-width: 768px) {
  .message__content {
    padding: 0 14px;
  }
}

@media (min-width: 1025px) {
  .message__content {
    display: block;
    margin-left: 200px;
    background: white;
    box-shadow: 0 1px 2px rgba(0,0,0,.2);
    border-radius: 2px;
  }

  .message--even .message__content {
    background: hsl(207, 90%, 98%);
  }
}

.message__content-text {
  margin: 1em 0;
}

.message__content-edit-mention {
  font-size: .8em;
  color: rgba(0,0,0,.5);
}

.quote {
  margin: 1em 0;
  border-left: 3px solid rgba(33,150,243,.25); /* Blue 500 */
  padding: 1px 7px;
  background: rgba(33,150,243,.03);
}

@media (min-width: 768px) {
  .quote {
    padding: 1px 10px;
  }
}

@media (min-width: 1025px) {
  .quote {
    font-size: 13px;
  }
}

.message__content-text > .quote {
  background: rgba(33,150,243,.05);
}

.quote > p {
  margin: .5em 0;
}

.message__content-text > .pre-jv, .message__content-text p > .code-jv {
  font-size: 95%;
  font-family: Menlo, Consolas, monospace;
  border: 1px solid rgba(0,0,0,.25);
  border-radius: 2px;
  background: rgba(230,230,235,.5);
}

.pre-jv {
  padding: .5em 7px;
  word-wrap: normal;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

.code-jv {
  padding: 2px 3px;
}

.spoil {
  background: #EF9A9A;
  display: inline-block;
  width: 80px;
  height: 22px;
  margin: -4px 0;
  border-radius: 2px;
  overflow: hidden;
  padding: 3px;
}

.spoil--block {
  display: block;
  margin: 1em 0;
}
/* ... */

